<resources>
    <string name="app_name">ECart</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="ecart">ECart</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="next">NEXT</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_title">Address Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="cod">COD</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="debit_card_credit_card">Debit Card / Credit Card</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="confirm_and_place_order">CONFIRM AND PLACE ORDER</string>
    <string name="clear">Clear Data</string>
    <string name="display">Display</string>
    <string name="skip">Skip</string>
    <string name="fresh_food">Fresh Food</string>
    <string name="you_can_order_different_kind_of_find_and_will_be_delivered_in_minutes">You can order different kind of find and will be delivered in minutes!</string>
    <string name="fastDevilvery">Fast Delivery</string>
    <string name="EasyPayment">Easy Payment</string>
    <string name="getStarted">Get Started</string>
</resources>