<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.checkout.address.PaymentFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_payment_option"
        android:layout_margin="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payment_radio_group"
        >
        <RadioButton
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cod"
            android:id="@+id/radio_cod"
            />
        <RadioButton
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_banking"
            android:id="@+id/radio_ib"
            />
        <RadioButton
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_card_credit_card"
            android:id="@+id/radio_card"
            />
        <RadioButton
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_pal"
            android:id="@+id/radio_paypal"
            />
    </RadioGroup>
        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skyBlue"
            android:textColor="@color/white"
            android:text="@string/next"
            android:id="@+id/btn_next"
            />
    </LinearLayout>
</FrameLayout>