<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/add_new_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        android:hint="@string/enter_title"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:inputType="textMultiLine"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:id="@+id/tv_address"
        android:hint="@string/enter_address"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        android:background="@color/skyBlue"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:text="@string/save"
        />





</androidx.constraintlayout.widget.ConstraintLayout>