<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.ecartapp.view.onBoardingScreen.FirstOnBoardingFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btnSkip"
        android:text="@string/skip"
        android:fontFamily="monospace"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:background="@color/cardview_shadow_end_color"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        android:id="@+id/gd1"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:elevation="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img"
        android:src="@drawable/baseline_fastfood_24"
        app:layout_constraintTop_toBottomOf="@id/gd1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/fresh_food"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:id="@+id/disc"
        android:fontFamily="sans-serif"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/you_can_order_different_kind_of_find_and_will_be_delivered_in_minutes"
        android:id="@+id/diesciption"
        app:layout_constraintTop_toBottomOf="@+id/disc"
        android:gravity="center"
        android:fontFamily="sans-serif"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:fontFamily="sans-serif"
        android:layout_margin="5dp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        android:background="@color/cardview_shadow_end_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>