<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.checkout.OrderConfirmationFragment">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_total_bill_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/total_bill_amount"
        app:layout_constraintTop_toBottomOf="@+id/rv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_totalbill"
        android:textColor="@color/orange"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/total_bill_amount"
        app:layout_constraintTop_toBottomOf="@+id/rv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_delivery_address"
        android:text="@string/delivery_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_bill_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_address"
        android:id="@+id/cardview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tv_address_title"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address_detail"
            />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment_label"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:text="@string/payment_option"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_payment"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:text="@string/payment_option"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_order"
        android:text="@string/confirm_and_place_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>


