<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:padding="10dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/skyBlue"
        android:id="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        android:layout_margin="40dp"
        android:src="@drawable/baseline_shopping_cart_24"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/gdv1"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/gdh1"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_email"
        android:text="@string/email_id"
        android:textColor="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/gdh1"
        app:layout_constraintStart_toEndOf="@id/gdv1"
        android:layout_margin="3dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/gdv2"
        app:layout_constraintGuide_percent="0.90"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_margin="3dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmailId"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/gdh1"
        app:layout_constraintStart_toEndOf="@id/gdv1"
        app:layout_constraintEnd_toStartOf="@id/gdv2"
        android:background="@drawable/edittextbackground"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gdh2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPassword"
        android:text="@string/password"
        android:textColor="@color/silver"
        app:layout_constraintBottom_toTopOf="@+id/gdh2"
        app:layout_constraintStart_toEndOf="@id/gdv1"
        android:layout_margin="3dp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_margin="3dp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/etPassword"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/gdh2"
        app:layout_constraintStart_toEndOf="@id/gdv1"
        app:layout_constraintEnd_toStartOf="@id/gdv2"
        android:background="@drawable/edittextbackground"
        android:inputType="textPassword"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/btnForgotPassword"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@id/gdv1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/radiusbackground"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/progressBar"
        android:visibility="gone"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/i_don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/transparent"
        android:textColor="@color/orange"/>

</androidx.constraintlayout.widget.ConstraintLayout>