<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyBlue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/hamburger"
                android:src="@drawable/baseline_hamburger_24"
                android:background="@color/skyBlue"
                android:layout_gravity="start"
                android:layout_margin="15dp"
                />
            <TextView
                android:id="@+id/totalCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/tvTotal"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/tvSum"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- RecyclerView for cart items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/checkoutButton"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


        <Button
            android:id="@+id/checkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:background="@color/skyBlue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
